syntax = "proto3";
enum ErrorCode
{
	NoError = 0;
	OK = 200;//请求处理成功
	Accepted = 202;//服务器已接受请求，但尚未处理
	NoContent = 204;//服务器成功处理了请求，但不需要返回任何实体内容
	BadRequest = 400;//请求无法被服务器理解,解包异常
	Unauthorized = 401;//当前请求需要用户验证,appkey非法
	SignatureFailed = 402;//签名失败
	Forbidden = 403;//服务器已经理解请求，但是拒绝执行它,此账号已登录
	NotFound = 404;//请求所希望得到的资源未被在服务器上发现。
	InternalServerError = 500;//服务器内部错误
	NotImplemented = 501;//服务器无法识别请求的方法
	BadGateway = 502;//网关或者代理工作的服务器尝试执行请求时，从上游服务器接收到无效的响应。
	ServiceUnavailable = 503;//服务器维护或者过载
}

